aligned cards, fixed slider

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 body{
   background-color: rgba(211, 211, 211, 1);
 }
-
+:root, [data-bs-theme=light] {
+  --bs-carousel-indicator-active-bg: #0d6efd;
+  --bs-carousel-caption-color: #0d6efd;
+}
 
 @keyframes logo-spin {
   from {
